// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard Renders correctly when successRateDiff is negative 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main repositoryCard"
  >
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--color StyledProps--color-black"
      style="--text-line-clamp: 1;"
    >
      Pipeline 1
    </p>
    <div
      class="StyledProps--font StyledProps--main mainContent"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main cardStats"
        >
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            builds
          </p>
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            success rate
          </p>
          <p
            class="StyledProps--font StyledProps--main statContent"
          >
            30
          </p>
          <div
            class="StyledProps--font StyledProps--main statWrap"
          >
            <p
              class="StyledProps--font StyledProps--main statContent"
            >
              60
              %
            </p>
            <span
              class="bp3-icon bp3-icon-caret-down StyledProps--main"
              icon="caret-down"
            >
              <svg
                data-icon="caret-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  caret-down
                </desc>
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main rateDiffValue"
            >
              5
              %
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main chartWrapper StyledProps--margin-left-medium"
        style="height: 40px;"
      >
        <div />
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main cardFooter"
    >
      <div
        class="StyledProps--font StyledProps--main avatarWrapper"
      >
        <div
          class="Avatar--Avatar Avatar--contentStyle"
        >
          <span
            class="bp3-popover-wrapper Avatar--avatarPopOver"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="Avatar--AvatarInner"
                style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                tabindex="0"
              >
                JD
              </div>
            </span>
          </span>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 2;"
        >
          This is message
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main times"
      >
        6 hours ago
        <span
          class="bp3-icon bp3-icon-time StyledProps--main timeIcon"
          icon="time"
        >
          <svg
            data-icon="time"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              time
            </desc>
            <path
              d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        60m
      </div>
    </div>
  </div>
</div>
`;

exports[`RepositoryCard Renders correctly when successRateDiff is positive 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main repositoryCard"
  >
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--color StyledProps--color-black"
      style="--text-line-clamp: 1;"
    >
      Pipeline 1
    </p>
    <div
      class="StyledProps--font StyledProps--main mainContent"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main cardStats"
        >
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            builds
          </p>
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            success rate
          </p>
          <p
            class="StyledProps--font StyledProps--main statContent"
          >
            30
          </p>
          <div
            class="StyledProps--font StyledProps--main statWrap"
          >
            <p
              class="StyledProps--font StyledProps--main statContent"
            >
              60
              %
            </p>
            <span
              class="bp3-icon bp3-icon-caret-up StyledProps--main"
              icon="caret-up"
            >
              <svg
                data-icon="caret-up"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  caret-up
                </desc>
                <path
                  d="M11.87 9.17s.01 0 0 0l-3.5-4C8.28 5.07 8.15 5 8 5s-.28.07-.37.17l-3.5 4a.495.495 0 00.37.83h7a.495.495 0 00.37-.83z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main rateDiffValue"
            >
              10
              %
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main chartWrapper StyledProps--margin-left-medium"
        style="height: 40px;"
      >
        <div />
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main cardFooter"
    >
      <div
        class="StyledProps--font StyledProps--main avatarWrapper"
      >
        <div
          class="Avatar--Avatar Avatar--contentStyle"
        >
          <span
            class="bp3-popover-wrapper Avatar--avatarPopOver"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="Avatar--AvatarInner"
                style="border-radius: 100%; line-height: 18px; width: 24px; height: 24px; font-size: 10px;"
                tabindex="0"
              >
                JD
              </div>
            </span>
          </span>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 2;"
        >
          This is message
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main times"
      >
        6 hours ago
        <span
          class="bp3-icon bp3-icon-time StyledProps--main timeIcon"
          icon="time"
        >
          <svg
            data-icon="time"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              time
            </desc>
            <path
              d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        60m
      </div>
    </div>
  </div>
</div>
`;
